@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.universal"
        name="Universal Scraper"
-       version="1.4.0"
+       version="1.5.0"
        provider-name="Olympia, Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
-    <import addon="metadata.common.themoviedb.org" version="2.3.0"/>
+    <import addon="metadata.common.themoviedb.org" version="2.4.0"/>
     <import addon="metadata.common.movieposterdb.com" version="1.0.5"/>
     <import addon="metadata.common.imdb.com" version="2.2.3"/>
     <import addon="metadata.common.impa.com" version="1.0.3"/>
