@@ -34,6 +34,7 @@
     <string id="30038">Enable fanart from trakt.tv</string>
     <string id="30039">Enable trailers from trakt.tv</string>
     <string id="30040">     Genre Language</string>
+    <string id="30041">     Preferred Trailer Language</string>
 
     <string id="30100">Rating</string>
     <string id="30021">Get Ratings from</string>
