@@ -34,6 +34,7 @@
     <setting label="30028" type="lsep"/>
     <setting label="30006" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="No"/>
     <setting label="30009" type="bool" id="tmdbtrailer" default="true"/>
+    <setting label="30041" type="labelenum" values="cs|da|de|el|en|es|fi|fr|he|hr|hu|it|ja|ko|nl|no|pl|pt|ru|sl|sv|tr|zh" id="tmdbtrailerlanguage" default="en" enable="!eq(-1,false)"/>
     <setting label="30039" type="bool" id="trakttvtrailer" default="false"/>
     <setting label="30005" type="bool" id="ytrailer" default="false"/>
   </category>
