@@ -1,3 +1,6 @@
+[B]1.5.0[/B]
+- added: option to select preferred trailer language
+
 [B]1.4.0[/B]
 - added: option to get plot from port.hu
 
